[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = {version = "1", features= ["full"]}
snowflake-connector-rs = "0.6.5"
csv = "1.3.1"
sqlx="0.8.3"
actix-cors="0.7.0"